--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
       background: rgba(255, 255, 255, 0.06);
       border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 12px;
-      padding: 12px 16px;
+      padding: 12px 8px;
       text-align: center;
       min-width: 85px;
       flex: 1;
@@ -377,6 +377,8 @@
       opacity: 0;
       transform: translateY(16px) scale(0.95);
     }
+
+
 
     .mini-card.visible {
       opacity: 1;
@@ -423,12 +425,15 @@
     }
 
     .mini-card-label {
-      font-size: 0.55rem;
+      font-size: 0.5rem;
       text-transform: uppercase;
-      letter-spacing: 0.08em;
+      letter-spacing: 0.04em;
       opacity: 0.5;
       margin-top: 4px;
       white-space: nowrap;
+      width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .pr-cards-row {
@@ -543,7 +548,7 @@
       margin-left: 8px;
       transform: skewX(-6deg);
       display: inline-block;
-      letter-spacing: 0.05em;
+      letter-spacing: 0.04em;
     }
 
     .context {
