--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Year In Motion</title>
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔄</text></svg>">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600;700&family=Outfit:wght@300;400;500;600&family=Instrument+Serif:ital@0;1&display=swap"
@@ -1308,6 +1309,36 @@
         width: 18px;
       }
     }
+
+    .save-btn {
+      position: fixed;
+      top: 24px;
+      right: 24px;
+      z-index: 2000;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      color: white;
+      padding: 8px 16px;
+      border-radius: 20px;
+      font-family: 'Inter', sans-serif;
+      font-size: 0.9rem;
+      cursor: pointer;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      transition: all 0.2s ease;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .save-btn:hover {
+      background: rgba(255, 255, 255, 0.2);
+      transform: scale(1.05);
+    }
+
+    .save-btn:active {
+      transform: scale(0.95);
+    }
   </style>
 </head>
 
@@ -1340,6 +1371,12 @@
   <div class="gradient-spotlight" id="gradientSpotlight"></div>
   <div class="wrapped-content hidden" id="wrappedContent">
     <div class="progress-container" id="progressContainer"></div>
+    <div id="debugLog"></div>
+
+    <button id="saveBtn" class="save-btn" onclick="saveCurrentCard()">
+      📸 Save Image
+    </button>
+
     <div class="nav-area left" onclick="prevCard()"></div>
     <div class="nav-area right" onclick="nextCard()"></div>
 
@@ -2808,6 +2845,52 @@
 
     function updateLoadingText(text) {
       // No-op as requested by user
+    }
+
+    function saveCurrentCard() {
+      const btn = document.getElementById('saveBtn');
+      const navLeft = document.querySelector('.nav-area.left');
+      const navRight = document.querySelector('.nav-area.right');
+      const debug = document.getElementById('debugLog');
+
+      // Hide UI elements
+      if (btn) btn.style.display = 'none';
+      if (navLeft) navLeft.style.display = 'none';
+      if (navRight) navRight.style.display = 'none';
+      if (debug) debug.style.display = 'none';
+
+      // Pause auto-advance
+      if (autoAdvanceTimer) clearTimeout(autoAdvanceTimer);
+
+      html2canvas(document.body, {
+        backgroundColor: '#111', // Fallback
+        scale: 2, // Higher quality
+        logging: false,
+        useCORS: true // For external images
+      }).then(canvas => {
+        const link = document.createElement('a');
+        link.download = `strava-wrapped-${Date.now()}.png`;
+        link.href = canvas.toDataURL('image/png');
+        link.click();
+
+        // Restore UI
+        if (btn) btn.style.display = 'flex';
+        if (navLeft) navLeft.style.display = 'block';
+        if (navRight) navRight.style.display = 'block';
+        if (debug) debug.style.display = 'block';
+
+        // Resume auto-advance (optional, maybe better to let user manually resume)
+        // resetAutoAdvance(); 
+      }).catch(err => {
+        console.error('Screenshot failed:', err);
+        alert('Could not save image. ' + err.message);
+
+        // Restore UI on error
+        if (btn) btn.style.display = 'flex';
+        if (navLeft) navLeft.style.display = 'block';
+        if (navRight) navRight.style.display = 'block';
+        if (debug) debug.style.display = 'block';
+      });
     }
 
     function hideLoading() {
