--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Year In Motion</title>
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔄</text></svg>">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-image/1.11.11/html-to-image.min.js"></script>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600;700&family=Outfit:wght@300;400;500;600&family=Instrument+Serif:ital@0;1&display=swap"
@@ -2853,7 +2853,7 @@
 
       const node = document.body;
 
-      domtoimage.toPng(node, {
+      htmlToImage.toPng(node, {
         filter: (node) => {
           // Exclude UI elements
           if (node.id === 'saveBtn' || node.id === 'debugLog') return false;
@@ -2869,7 +2869,7 @@
         })
         .catch(function (error) {
           console.error('Screenshot failed:', error);
-          alert('Could not save image. ' + error.message);
+          alert('Could not save image. ' + (error.message || error));
         });
     }
 
